# dlai-autogen-patterns-octo-journey

./: .gitignore  README.md  lesson_1_standup_comedians.ipynb  multi_agent_comedy.ipynb  pyproject.toml  util.py
