[project]
name = "dlai-autogen-patterns-octo-journey"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chess==1.10.0",
    "matplotlib>=3.10.5",
    "numpy>=1.26.4",
    "pandas>=2.3.1",
    "pyautogen==0.2.25",
    "yfinance>=0.2.65",
]
